docker/PodPostgresql.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-postgres
  labels:
    app: doa-postgres
spec:
  containers:
    - name: postgres
      image: postgres:12-alpine3.18
      ports:
        - containerPort: 5432
      volumeMounts:
        - name: postgres-data
          mountPath: '/var/lib/postgresql/data'
  volumes:
    - name: postgres-data
      hostPath:
        path: '/run/desktop/mnt/host/d/Projetos/Agrotopus/projetoDevops/psqldata'
