docker/devOpApp-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doa-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: doa-app
  template:
    metadata:
      labels:
        app: doa-app
        network: dev-op-app
    spec:
      containers:
        - name: doa-app-pod
          image: heliomba/dev-op-app:v1.0
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health/liveness
              port: 8080
            initialDelaySeconds: 60
            timeoutSeconds: 5
            successThreshold: 1
            periodSeconds: 10
          readinessProbe:
            httpGet:
                path: /health/readiness
                port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            periodSeconds: 10
