docker/devOpApp-Postgresql-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: devops-postgres
  labels:
    tier: doa-postgres
    network: dev-op-app
spec:
  containers:
    - name: postgres
      image: postgres:12-alpine3.18
      ports:
        - containerPort: 5432
      volumeMounts:
        - name: postgres-data
          mountPath: '/var/lib/postgresql/data'
  volumes:
    - name: postgres-data
      persistentVolumeClaim:
        claimName: my-local-pvc
