docker/devOpApp-Prometheus-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: prometheus-pod
  labels:
    app: doa-prometheus
    network: dev-op-app
spec:
  containers:
    - name: prometheus
      image: bitnami/prometheus:latest
      ports:
        - containerPort: 9090
          protocol: TCP
      volumeMounts:
        - name: prometheus-config
          mountPath: /opt/bitnami/prometheus/conf/prometheus.yml
  volumes:
    - name: prometheus-config
      hostPath:
        path: '/run/desktop/mnt/host/d/Projetos/Agrotopus/projetoDevops/prometheusData/prometheus.yml'
