docker/ClusterIP-Postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-service-postgres
spec:
  type: ClusterIP
  selector:
    app: doa-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
