docker/Service-Postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-postgres
spec:
  selector:
    app: doa-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
