docker/Service-Prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-prometheus
spec:
  selector:
    app: doa-prometheus
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
