docker/devOpApp-NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-op-app-nodeport-service
spec:
  type: NodePort
  selector:
    app: doa-app
  ports:
    - protocol: TCP
      nodePort: 30000
      port: 8080
