docker/devOpApp-prometheus-NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-op-app-postgres-nodeport-service
spec:
  type: NodePort
  selector:
    app: doa-prometheus
  ports:
    - protocol: TCP
      nodePort: 30001
      port: 8080
