docker/Network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dev-op-app-network-policy
spec:
  podSelector:
    matchLabels:
      network: dev-op-app
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network: dev-op-app
